# model/ebcp_player.go
@@ -35,7 +35,7 @@ Table: o_ebcp_player
 
 JSON Sample
 -------------------------------------
-{    "id": "RDZeZuPMFSXNfoncmHpLIakAN",    "created_by": "BnPBpgmIohgdnxkpkoNgaMqfl",    "created_time": 9,    "updated_by": "GMLjIrDGmAOhvJUnsKytqcXJd",    "updated_time": 73,    "name": "DZUIxgnvOrkCxkmsyUiTNAuZW",    "ip_address": "VkaZffdIifVrjVGhPUnWEefxA",    "port": 68,    "version": "xhfomXgGKqFrrLJwlnuiBvEyo",    "item_id": "SBUqxWHcrxPgtAApFnYiENeJL",    "current_program_id": "LKbIioSyZcThHdVcQlTwJouYL",    "current_program_state": 68,    "status": 59}
+{    "id": "PKfFbyVBCooglRqmLZgptYeLB",    "created_by": "KllMGxXaFMcgTdAbZUUwKCaoO",    "created_time": 71,    "updated_by": "YBjwrXLOXYmtDLfiRyyIoMXYJ",    "updated_time": 19,    "name": "GVbvXrqtFbPebEyYbSRVDaXyg",    "ip_address": "PbLoiGLsTTxYrFNHrIxaOLLGv",    "port": 82,    "version": "ggnwBNpJKnUZiRBVldVLBtjRV",    "item_id": "uaODaMOdTWJYsLAIveeTFaShh",    "current_program_id": "xuPpjWYRKIiBbxdBimFgSxeAN",    "current_program_state": 20,    "status": 80}
 
 
 
