# model/ebcp_player_program.go
@@ -31,7 +31,7 @@ Table: o_ebcp_player_program
 
 JSON Sample
 -------------------------------------
-{    "id": "HMMpdijBUHTSdQitnvEbptKIu",    "created_by": "XOexCsFUgQpIghrrwZqAYRBiy",    "created_time": 0,    "updated_by": "AYlENbaugQcGVPZMpkylrIMfw",    "updated_time": 93,    "name": "eFHyHsBIJyVQZJNIfrccsbIBw",    "player_id": "iXVTkuahjKsOMWSRpfvJSBXJE",    "program_id": "SKZENZUUhpCrUbHegYfactFJP",    "program_index": 17}
+{    "id": "bTNxqxkTbKohFhGbVvJnnplxW",    "created_by": "TJkHqPRIwfdUOYgsXqUOFtCwC",    "created_time": 61,    "updated_by": "GhjJsVckoRCGxCWcxhIWIZONW",    "updated_time": 97,    "name": "cmqhunoRNmyhSglfacXuCLanc",    "player_id": "uIPmEdLRWiucfMyaWJcHfcLgq",    "program_id": "yuXUVckxtRBwydnYsGUubgoUO",    "program_index": 99}
 
 
 
