# model/ebcp_player_program_media.go
@@ -32,7 +32,7 @@ Table: o_ebcp_player_program_media
 
 JSON Sample
 -------------------------------------
-{    "id": "RjyQqGKVhtmKPElrgJpjOXkgJ",    "created_by": "rFiohoTuqgGjVRjcFDGhFcRfK",    "created_time": 98,    "updated_by": "RBpycWcXmFbsHKNPomioalZpb",    "updated_time": 75,    "media_id": "PYHwlqQiUlCaPqkXKNpybAhTP",    "media_name": "uEkYVNMPbRXcnrwHlApkLPoBo",    "player_id": "EHvAbVHhvggKuTOhypCgmjAEQ",    "program_id": "GOdPXjFXLpPDkignXVwBPNjqC",    "player_program_id": "TYkjNiqvqDVexWgJGMRjyVjIQ"}
+{    "id": "gWaadeMOlBnQxkogIjPZGbInB",    "created_by": "dbDBCibQVIMgOWIYNjnIIeUUb",    "created_time": 53,    "updated_by": "ZjkYoLswfjUEKURaTOIKMMcSS",    "updated_time": 98,    "media_id": "vhwtVZYhlUWAyEpsOTfioLMCC",    "media_name": "YbiiZMewVIumISZFbwCWjCopW",    "player_id": "WrqpOVAYnAsSYJYtIVNflHVtc",    "program_id": "bELBdkulIfZnqPuIESWXLJGys",    "player_program_id": "cKgQvnDlUFcgHJMbXXZaviDha"}
 
 
 
